# workshop-notes

./: README.md
2021/w38/kata_go_bank-kata/: .gitignore  .golangci.yml  Makefile  README.md  go.mod  go.sum
2021/w38/kata_go_bank-kata/core/model/: account-statement.go  account-statement_test.go  account.go  amount.go  statement-line.go  statement-line_test.go
2021/w38/kata_go_bank-kata/tests/: account-service_test.go
2022/w04/bank_kata_ex/: .gitignore  Makefile  README.md  mix.exs  test-watch.sh
2022/w04/bank_kata_ex/config/: test.exs
2022/w04/bank_kata_ex/test/: test_helper.exs
2022/w04/bank_kata_ex/test/support/: mocks.ex  (+2 more)
2022/w14/mars_rover_kata_go/: LICENSE  Makefile  README.md  command-executor.go  command-executor_test.go  command.go  command_test.go  direction.go  direction_test.go  grid.go  location.go  move-executor.go  move-executor_test.go  position.go  position_test.go  rover.go  rover_test.go  watch-test.sh
2022/w21/mars_rover_kata_js/: README.md  package-lock.json  package.json
2022/w21/mars_rover_kata_js/src/: command.js  direction.js  position.js  rover.js
2022/w38/tsbasicsetup/: .eslintrc.js  README.md  package-lock.json  package.json  tsconfig.json
2022/w38/tsbasicsetup/src/: index.ts
2022/w38/tsbasicsetup/tests/: index.test.ts
2022/w49/rust_test_double/: .gitignore  Cargo.toml  README.md
2022/w49/rust_test_double/model/: Cargo.toml
2022/w49/rust_test_double/model/src/: action_boundaries.rs  lib.rs
2022/w49/rust_test_double/web/: Cargo.toml
2022/w49/rust_test_double/web/src/: handlers.rs  main.rs  router.rs  zoo.rs
(+38 files in other folders)
