[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.17"
tokio = { version = "1.21.2", features = ["full"] }
tower-http = { version = "0.3.4", features = ["trace"] }
hyper = { version = "0.14.23", features = ["full"] }
serde = "1.0.147"
serde_json = "1.0.87"
serde_derive = "1.0.147"
serde_with = "2.1.0"
mime = "0.3.16"
validator = { version = "0.15", features = ["derive"] }
async-trait = "0.1.59"

model = { path = "../model" }

[dev-dependencies]
tower = { version = "0.4.13", features = ["util"] }
